--- a/screen.css
+++ b/screen.css
@@ -6,6 +6,11 @@
             background-position: center; /* Centers the image */
             background-repeat: no-repeat; }
 
+    .menu-padding{
+        padding-top: 40px;
+        padding-right:80px;
+        text-align: right;
+    }
 
         .align-center {
             text-align: center;
@@ -54,7 +59,7 @@
             font-family: "Poppins" ;
             font-weight: 500;
             font-style: normal;
-            font-size: 24px;
+            font-size: 20px;
 
                         }
         .poppins-new {
