--- a/css/styles.css
+++ b/css/styles.css
@@ -10840,13 +10840,12 @@ textarea.form-control-lg {
 
 header.masthead {
   position: relative;
-  background: url("../picture/baru.jpg") no-repeat center center;
+  background: url("../picture/header3.jpg") no-repeat center center;
   background-size: cover;
 }
 header.masthead:before {
   content: "";
   position: absolute;
-  background-color: #1c375e;
   height: 100%;
   width: 100%;
   top: 0;
