--- a/css/styles.css
+++ b/css/styles.css
@@ -245,7 +245,6 @@ sup {
 }
 
 a {
-  color: var(--bs-link-color);
   text-decoration: underline;
 }
 a:hover {
@@ -10835,7 +10834,6 @@ textarea.form-control-lg {
   height: 7rem;
 }
 .features-icons .features-icons-item .features-icons-icon i {
-  font-size: 4.5rem;
 }
 
 header.masthead {
@@ -10857,7 +10855,7 @@ header.masthead h1, header.masthead .h1 {
 }
 @media (min-width: 768px) {
   header.masthead {
-    padding-top: 12rem;
+    padding-top: 40px;
     padding-bottom: 12rem;
   }
   header.masthead h1, header.masthead .h1 {
