--- a/screen.css
+++ b/screen.css
@@ -54,19 +54,24 @@
             letter-spacing: 2px;
                         }
 
-        .poppins-medium {
+        .poppins-new {
             font-family: "Poppins" ;
             font-weight: 500;
             font-style: normal;
             font-size: 20px; }
 
-        .poppins-new {
+        .poppins-medium {
             font-family: "Poppins" ;
-            font-weight: 500;
+            font-weight: 600;
             font-style: normal;
             font-size: 24px;
             color: black;
                         }
+
+        .black{
+            color: black;
+        }
+
         .img_deg{
             float: left;
         }
