--- a/screen.css
+++ b/screen.css
@@ -180,7 +180,7 @@
 
          .photo-size4{
             width: 400px;
-            height: 400px;
+            height: 400px; }
 
            .padding-top{
             padding-top: 80px;
