--- a/screen.css
+++ b/screen.css
@@ -120,7 +120,9 @@
             height: 170px;}
         
         .custom-bg1{
-        background-image: url('./picture/header2.jpg')}
+        background-image: url('./picture/header2.jpg');
+        height: 500px;
+    }
 
         .custom-bg3{
             height: 500px;
