--- a/screen.css
+++ b/screen.css
@@ -120,7 +120,7 @@
             height: 170px;}
         
         .custom-bg1{
-        background-image: url('./picture/header2.jpg');
+        background-image: url('./picture/page bg2 new.jpg');
         height: 500px;
     }
 
