--- a/screen.css
+++ b/screen.css
@@ -120,8 +120,8 @@
             height: 170px;}
         
         .custom-bg1{
-        background-image: url('./picture/page bg2 new.jpg');
-        height: 500px;
+        background-image: url('./picture/header2.jpg');
+        height :500px
     }
 
         .custom-bg3{
